force-app/main/default/objects/Owner__c/Owner__c.object-meta.xml
<CustomObject>
    <label>Owner</label>
    <nameField>
        <label>Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>