force-app/main/default/objects/Owner__c/fields/Number_Of_Property__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Property__c</fullName>
    <label>Number Of Property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>