force-app/main/default/objects/Owner__c/fields/OwnerKey__c.field-meta.xml
<CustomField>
    <fullName>OwnerKey__c</fullName>
    <description>Optional external key for imports/mapping.</description>
    <externalId>true</externalId>
    <label>Owner Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>