force-app/main/default/objects/Owner__c/fields/OwnerType__c.field-meta.xml
<CustomField>
    <fullName>OwnerType__c</fullName>
    <label>Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>