force-app/main/default/objects/Owner__c/listViews/Imported_1000_Owner_records.listView-meta.xml
<ListView>
    <fullName>Imported_1000_Owner_records</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Mine</filterScope>
    <label>Imported 1000 Owner records</label>
</ListView>